fixed warehouse handlers, added pdf/xls report handler for warehouse id
