# docs/v1/swagger.json
@@ -4154,6 +4154,130 @@
                 }
             }
         },
+        "/warehouse/report/{id}/pdf": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Возвращает PDF файл с данными склада",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/pdf"
+                ],
+                "tags": [
+                    "warehouse"
+                ],
+                "summary": "Generate warehouse info pdf",
+                "operationId": "warehouse-info-report-pdf",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Warehouse ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "PDF файл отчета",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/warehouse/report/{id}/xls": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Возвращает XLS файл с данными склада",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "warehouse"
+                ],
+                "summary": "Generate warehouse info xls",
+                "operationId": "warehouse-info-report-xls",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Warehouse ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "XLS файл отчета",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/warehouse/responsible-person": {
             "get": {
                 "security": [
@@ -4934,6 +5058,7 @@
                 "balance",
                 "bank_details",
                 "contact_person",
+                "contract_date",
                 "contract_number",
                 "legal_address",
                 "name",
@@ -4966,6 +5091,11 @@
                     "type": "string",
                     "maxLength": 140,
                     "example": "Контактное лицо у поставщика"
+                },
+                "contract_date": {
+                    "description": "Дата договора с поставщиком",
+                    "type": "string",
+                    "example": "2022-01-01T00:00:00Z"
                 },
                 "contract_number": {
                     "description": "Номер и дата договора с поставщиком",
@@ -5080,7 +5210,8 @@
                 },
                 "comments": {
                     "description": "Комментарии к складу",
-                    "type": "string"
+                    "type": "string",
+                    "example": "Комментарии к складу"
                 },
                 "country": {
                     "description": "Страна склада",
@@ -5096,6 +5227,11 @@
                     "description": "Электронная почта для связи",
                     "type": "string",
                     "example": "Электронная почта для связи"
+                },
+                "locality": {
+                    "description": "Населенный пункт склада",
+                    "type": "string",
+                    "example": "Населенный пункт склада"
                 },
                 "max_capacity": {
                     "description": "Максимальная вместимость склада",
@@ -5122,7 +5258,8 @@
                 },
                 "region": {
                     "description": "Регион склада",
-                    "type": "string"
+                    "type": "string",
+                    "example": "Регион склада"
                 },
                 "responsible_person": {
                     "description": "Ответственное лицо за склад",
@@ -5646,6 +5783,7 @@
                 "balance",
                 "bank_details",
                 "contact_person",
+                "contract_date",
                 "contract_number",
                 "legal_address",
                 "name",
@@ -5678,6 +5816,11 @@
                     "type": "string",
                     "maxLength": 140,
                     "example": "Контактное лицо у поставщика"
+                },
+                "contract_date": {
+                    "description": "Дата договора с поставщиком",
+                    "type": "string",
+                    "example": "2022-01-01T00:00:00Z"
                 },
                 "contract_number": {
                     "description": "Номер и дата договора с поставщиком",
